--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html, body{
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   background: #F2F4F5;
   color: #1E1E1F;
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
 }
 
 #root {
-  margin: 0 24px;
+  /* margin: 0 24px; */
   position: relative;
   min-height: 100vh;
 }
